<resources>
    <string name="app_name">Smoogle</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="theme">Тема</string>
    <string name="language">Язык</string>
    <string-array name="languages">
        <item>Русский</item>
        <item>English</item>
    </string-array>
    <string name="settings">Settings</string>
    <string name="settings_ru">Настройки</string>
    <string name="select_image">Select Image</string>
    <string name="take_photo">Take Photo</string>
    <string name="back_to_main">Вернуться в главное меню</string>
    <string name="edit">Edit</string>
    <string name="recognized_text">Расспознаный текст</string>
    <string name="copy">Копировать</string>
    <string name="search">Поиск</string>
    <string name="back">Назад</string>
    <string name="edit_text">Edit Text</string>
    <string name="save_options">Выберите способ сохранения:</string>
    <string name="append_text">Добавить к последней записи</string>
    <string name="replace_text">Создать новую запись</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="history">История</string>
</resources>